# BattleSimulator

./: .gitignore  .travis.yml  CHANGELOG.md  Experimental.ipynb  LICENSE.txt  Makefile  README.md  README.rst  Theory.ipynb  build.sh  environment.yml  meta.yaml  pypi_update.sh  pyproject.toml  requirements.txt  setup.py
battlesim/: __defaults.py  __init__.py  __legacy.py  _ai.py  _battle.py  _damage.py  _distributions.py  _hit.py  _jitcode.py  _mathutils.py  _move.py  _noise.py  _simplot.py  _simulator_fast.py  _target.py  _terrain.py  _unit_quant.py  _utils.py  ai.py  army.py  background.py  battle.py  damage.py  distributions.py  hit.py  imageplot.py  jitcode.py  legacy.py  move.py  setup.py  simplot.py  simulator.py  simulator_fast.py  target.py  terrain.py  unit.py  unit_quant.py  utils.py
battlesim/distrib/: __init__.py  _composite.py  _distrib2.py
battlesim/plot/: __init__.py  _imageplot.py  _simplot.py
battlesim/simulation/: __init__.py  _ai.py  _damage.py  _hit.py  _move.py  _simulator_fast.py  _target.py
battlesim/terra/: __init__.py  _noise.py  _terrain.py
datasets/: starwars-clonewars.csv
examples/: Position-Changes.ipynb  Version.ipynb  example1.py  notebook1.ipynb  notebook2.ipynb  notebook3.ipynb  notebook4.ipynb  performance.ipynb  study-ai.ipynb
teaching/: 01 Dataset, Unit, Basic Simulation.ipynb  02 Improvements to Unit, Simulation.ipynb  03 Plotted Simulations and Performance.ipynb
tests/: test_battle.py  test_composite.py  test_distributions.py  test_move.py  test_simulator.py  test_target.py  test_terrain.py
